Rethrow exception and pass error level value