@@ -1,2 +1,13 @@
+@ECHO OFF
+CLS
+ECHO.
+ECHO Bootstrap...
+ECHO.
 java .bach\src\bootstrap.java
-bach .bach\src\build.java
+IF NOT ERRORLEVEL 0 ( EXIT /B %ERRORLEVEL% )
+
+ECHO.
+ECHO Build Bach with Bach...
+ECHO.
+java --module-path .bach\bin --add-modules ALL-MODULE-PATH .bach\src\build.java
+EXIT /B %ERRORLEVEL%
